<resources>
    <string name="app_name">Boardnet Mobile</string>
    <string name="serverURL">http://boardnetapi.hostingerapp.com/api</string>
    <string name="login_username">Username</string>
    <string name="login_button">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="register_title">Register</string>
    <string name="login_title">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="btnRegister">Register</string>
    <string name="title_activity_test">Test</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="test_failed">Test failed!</string>
    <string name="username">Username</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="login">Login</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="surname">Surname</string>
    <string name="remember_me">Remember me</string>
    <string name="bgg_username">BGG</string>
    <string name="save">Save</string>
    <string name="add_friend">Add friend</string>
    <string name="show">Show</string>
    <string name="search">Search</string>
    <string name="add_bgg">Add bgg library</string>
    <string name="title">Title</string>
    <string name="year_published">Year published</string>
    <string name="no_of_players">No. of players</string>
    <string name="add_play">Add play</string>
    <string name="add_to_library">Add to library</string>
    <string name="find_friend_by_name">Find by name</string>
    <string name="find_friend_by_username">Find by username</string>
    <string name="won">Won</string>
    <string name="points">Points</string>
    <string name="minutes">Minutes</string>
    <string name="duration">Duration</string>
    <string name="addPlayer">Add player</string>
    <string name="friend">Friend</string>
    <string name="remove">Remove</string>
</resources>
